# esp32_transfer_module

./: .gitignore  README.md
code/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
code/main/: CMakeLists.txt  app_net.c  app_net.h  app_protocol.c  app_protocol.h  app_uart.c  app_uart.h  app_web.c  app_web.h  clog.h  component.mk  first_task.c  first_task.h  main.c  net_task.c  net_task.h  rtos_tools.c  rtos_tools.h  second_task.c  second_task.h  self_def.h  system_param.c  system_param.h  task_list.c  task_list.h  test.c  test.h  test.html  uart_task.c  uart_task.h  version.c  version.h
doc/: esp32模块.xmind  esp32模块_软件设计_20200623.md  esp32透传_交互协议_20200724.md  esp32透传_开发计划_20200722.xlsx  esp32透传_软件设计_20200714.docx  ~$p32透传_软件设计_20200714.docx
