idf_component_register(SRCS "main.c"
                            "test.c"
                            "first_task.c"
                            "second_task.c"
                            "net_task.c"
                            "rtos_tools.c"
                            "task_list.c"
                            "system_param.c"
                            "app_net.c"
                            "app_uart.c"
                            "uart_task.c"
                            "version.c"
                    INCLUDE_DIRS "")

